--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.2"
+  },
+  "scripts": {
+	"start": "nodemon API/app.mjs"	
   }
 }
