--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.3",
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "eslint": "^9.37.0"
   },
   "dependencies": {
