--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.37.0"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
