--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api/app.mjs"
+    "start": "nodemon API/app.mjs"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
